--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
     "react-input-slider": "^6.0.1",
+    "react-native-vector-icons": "^9.1.0",
     "react-player": "^2.9.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
