--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
+    "react-input-multiline": "^0.3.1",
     "react-input-slider": "^6.0.1",
     "react-native-vector-icons": "^9.1.0",
     "react-player": "^2.9.0",
